Add SEO metadata and improve API loading performance

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,14 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Yubexo – Smart Tools for Creators</title>
+  <title>YouTube Toolkit – Free Thumbnail & Hashtag Generator</title>
+  <meta name="description"
+    content="Boost your YouTube growth with our free toolkit. Generates best-performing hashtags and extracts high-quality thumbnails instantly." />
+  <meta name="keywords"
+    content="YouTube tools, hashtag generator, thumbnail downloader, YouTube SEO, content creator tools, free youtube tools" />
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Mohin Raju" />
+  <meta name="google-site-verification" content="PASTE_TOKEN_HERE" />
 </head>
 
 <body>
